<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/name"
        android:text="@string/name"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:text="@string/email"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:text="@string/password"
        />


    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:text="@string/address"
        />
    <EditText
        android:id="@+id/qualification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qualification"
        android:text="@string/qualification"
        />
    <EditText
        android:id="@+id/corr_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/corr_Address"
        android:text="@string/corr_Address"
        />
    <EditText
        android:id="@+id/current_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_profile"
        android:text="@string/current_profile"
        />
    <EditText
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post"
        android:text="@string/post"
        />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/language"
    android:gravity="center"
    android:text="@string/language"/>

</LinearLayout>